<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/nav_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calendars"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/nav_calendars"
            app:showAsAction="never" />
    </group>

    <item
        android:id="@+id/nav_other"
        android:title="@string/nav_header_other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/nav_settings"
                app:showAsAction="never" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_action_info"
                android:title="@string/nav_about"
                app:showAsAction="never" />
        </menu>
    </item>

</menu>
