<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/app_version"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:paddingTop="8dp"
            android:text="@string/app_about"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:paddingTop="16dp"
            android:text="@string/app_libraries"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:paddingTop="4dp"
            android:text="@string/app_libraries_used"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/app_author_str"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/app_author_str_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

        <!--

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:paddingTop="4dp"
                    android:text="NoNonsense (&#169;) Jonas Kalderstam"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:paddingTop="4dp"
                    android:text="Material DateTime Picker (&#169;) W.Dullaer"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
        -->

    </LinearLayout>
</ScrollView>